--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1>🛍️ SRI KDM Shop</h1>
+                    <h1><img src="logo.png" alt="SRI KDM Shop" style="height: 50px; vertical-align: middle; margin-right: 10px;">SRI KDM Shop</h1>
                     <p>Toys & Mobile Accessories</p>
                 </div>
                 <button class="cart-btn" id="cartBtn">
