--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <h1><img src="logo.png" alt="SRI KDM Shop" style="height: 50px; vertical-align: middle; margin-right: 10px;">SRI KDM Shop</h1>
+                    <h1>🛍️ SRI KDM Shop</h1>
                     <p>Toys & Mobile Accessories</p>
                 </div>
                 <button class="cart-btn" id="cartBtn">
@@ -443,9 +443,9 @@
 
         <div class="contact-info">
             <h3>📞 Contact Us</h3>
-            <div class="contact-item">📱 Mobile: +91 95141 57908</div>
-            <div class="contact-item">📧 Email: srikdmshop@gmail.com</div>
-            <div class="contact-item">📍 Address: BB.Kulam, Madurai -2 Tamil Nadu</div>
+            <div class="contact-item">📱 Mobile: +91 XXXXX XXXXX</div>
+            <div class="contact-item">📧 Email: info@srikdmshop.com</div>
+            <div class="contact-item">📍 Address: Chennai, Tamil Nadu</div>
             <a href="https://wa.me/919XXXXXXXXX?text=Hi%20I%20want%20to%20order%20from%20SRI%20KDM%20Shop" 
                class="whatsapp-btn" target="_blank">
                 💬 Order via WhatsApp
