--- a/index.html
+++ b/index.html
@@ -414,10 +414,9 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <div class="logo">
-                    <h1>🛍️ SRI KDM Shop</h1>
-                    <p>Toys & Mobile Accessories</p>
-                </div>
+               <div class="logo">
+    <img src="logo.png" alt="SriKDMShop" style="height: 80px; filter: drop-shadow(0 2px 8px rgba(0,0,0,0.3));">
+</div>
                 <button class="cart-btn" id="cartBtn">
                     🛒 Cart <span class="cart-count" id="cartCount">0</span>
                 </button>
