--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SRI KDM Shop - Toys & Mobile Accessories</title>
+    <link rel="icon" type="image/png" href="logo.png">
     <style>
         * {
             margin: 0;
@@ -426,8 +427,9 @@
 
     <div class="hero">
         <div class="container">
-            <h2>Welcome to SRI KDM Shop</h2>
-            <p>Quality Toys & Mobile Accessories at Best Prices</p>
+            <img src="logo.png" alt="SriKDMShop" style="height: 150px; margin-bottom: 20px; filter: brightness(1.1);">
+<h2>Mobile Gadgets & Service & Toys Sales</h2>
+<p>Your One-Stop Shop for Quality Products</p>
         </div>
     </div>
 
