--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         }
 
         .header {
-    background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            background: #000000;
             color: white;
-            padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 1.5rem 0;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             position: sticky;
             top: 0;
             z-index: 100;
@@ -37,56 +37,24 @@
 
         .header-content {
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            flex-wrap: wrap;
         }
 
-        .logo h1 {
-            font-size: 1.8rem;
-            margin-bottom: 0.2rem;
-        }
-
-        .logo p {
-            font-size: 0.9rem;
-            opacity: 0.9;
-        }
-
-        .cart-btn {
-            background: white;
-            color: #667eea;
-            border: none;
-            padding: 0.8rem 1.5rem;
-            border-radius: 25px;
-            cursor: pointer;
-            font-weight: bold;
+        .logo {
             display: flex;
             align-items: center;
-            gap: 0.5rem;
-            transition: transform 0.2s;
         }
 
-        .cart-btn:hover {
-            transform: scale(1.05);
-        }
-
-        .cart-count {
-            background: #ff4757;
-            color: white;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.8rem;
+        .logo img {
+            height: 80px;
+            filter: drop-shadow(0 2px 8px rgba(255,255,255,0.2));
         }
 
         .hero {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             text-align: center;
-            padding: 3rem 0;
+            padding: 3rem 0 2rem 0;
         }
 
         .hero h2 {
@@ -190,6 +158,44 @@
 
         .add-to-cart-btn:hover {
             background: #5568d3;
+        }
+
+        .cart-float-btn {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            background: #667eea;
+            color: white;
+            border: none;
+            padding: 1rem 1.5rem;
+            border-radius: 50px;
+            cursor: pointer;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 0.7rem;
+            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
+            transition: transform 0.2s, box-shadow 0.3s;
+            z-index: 99;
+            font-size: 1.1rem;
+        }
+
+        .cart-float-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.5);
+        }
+
+        .cart-count {
+            background: #ff4757;
+            color: white;
+            border-radius: 50%;
+            min-width: 28px;
+            height: 28px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.9rem;
+            font-weight: bold;
         }
 
         .modal {
@@ -408,6 +414,13 @@
             .product-icon {
                 font-size: 3rem;
             }
+
+            .cart-float-btn {
+                bottom: 20px;
+                right: 20px;
+                padding: 0.8rem 1.2rem;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
@@ -415,21 +428,17 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-               <div class="logo">
-    <img src="logo.png" alt="SriKDMShop" style="height: 80px; filter: drop-shadow(0 2px 8px rgba(0,0,0,0.3));">
-</div>
-                <button class="cart-btn" id="cartBtn">
-                    🛒 Cart <span class="cart-count" id="cartCount">0</span>
-                </button>
+                <div class="logo">
+                    <img src="logo.png" alt="SriKDMShop">
+                </div>
             </div>
         </div>
     </header>
 
     <div class="hero">
         <div class="container">
-            <img src="logo.png" alt="SriKDMShop" style="height: 150px; margin-bottom: 20px; filter: brightness(1.1);">
-<h2>Mobile Gadgets & Service & Toys Sales</h2>
-<p>Your One-Stop Shop for Quality Products</p>
+            <h2>Mobile Gadgets & Service & Toys Sales</h2>
+            <p>Your One-Stop Shop for Quality Products</p>
         </div>
     </div>
 
@@ -453,6 +462,10 @@
             </a>
         </div>
     </div>
+
+    <button class="cart-float-btn" id="cartBtn">
+        🛒 Cart <span class="cart-count" id="cartCount">0</span>
+    </button>
 
     <div class="modal" id="cartModal">
         <div class="modal-content">
@@ -522,7 +535,6 @@
         ];
 
         let cart = [];
-        let currentCategory = 'all';
 
         function renderProducts(category = 'all') {
             const grid = document.getElementById('productsGrid');
