--- a/index.html
+++ b/index.html
@@ -22,49 +22,53 @@
         .header {
             background: #000000;
             color: white;
-            padding: 1.5rem 0;
+            padding: 0;
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             position: sticky;
             top: 0;
             z-index: 100;
         }
 
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
+        .header-container {
+            display: flex;
+            align-items: stretch;
+            min-height: 140px;
         }
 
-        .header-content {
+        .logo-section {
+            background: #000000;
+            padding: 1.5rem 2rem;
             display: flex;
             align-items: center;
+            justify-content: center;
+            min-width: 280px;
         }
 
-        .logo {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo img {
-            height: 80px;
+        .logo-section img {
+            height: 110px;
+            width: auto;
             filter: drop-shadow(0 2px 8px rgba(255,255,255,0.2));
         }
 
-        .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            text-align: center;
-            padding: 3rem 0 2rem 0;
+        .header-content {
+            flex: 1;
+            background: #000000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2rem;
         }
 
-        .hero h2 {
+        .header-content h1 {
             font-size: 2.5rem;
-            margin-bottom: 1rem;
+            text-align: center;
+            margin-bottom: 0.5rem;
         }
 
-        .hero p {
-            font-size: 1.2rem;
+        .header-content p {
+            font-size: 1.1rem;
             opacity: 0.9;
+            text-align: center;
         }
 
         .categories {
@@ -73,12 +77,19 @@
             gap: 1rem;
             padding: 2rem 0;
             flex-wrap: wrap;
+            background: #f5f5f5;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
         .category-btn {
             background: white;
-            border: 2px solid #667eea;
-            color: #667eea;
+            border: 2px solid #000000;
+            color: #000000;
             padding: 0.7rem 1.5rem;
             border-radius: 25px;
             cursor: pointer;
@@ -87,7 +98,7 @@
         }
 
         .category-btn:hover, .category-btn.active {
-            background: #667eea;
+            background: #000000;
             color: white;
         }
 
@@ -133,7 +144,7 @@
 
         .product-price {
             font-size: 1.5rem;
-            color: #667eea;
+            color: #000000;
             font-weight: bold;
             margin-bottom: 0.5rem;
         }
@@ -145,7 +156,7 @@
         }
 
         .add-to-cart-btn {
-            background: #667eea;
+            background: #000000;
             color: white;
             border: none;
             padding: 0.8rem;
@@ -157,14 +168,14 @@
         }
 
         .add-to-cart-btn:hover {
-            background: #5568d3;
+            background: #333333;
         }
 
         .cart-float-btn {
             position: fixed;
             bottom: 30px;
             right: 30px;
-            background: #667eea;
+            background: #000000;
             color: white;
             border: none;
             padding: 1rem 1.5rem;
@@ -174,7 +185,7 @@
             display: flex;
             align-items: center;
             gap: 0.7rem;
-            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
             transition: transform 0.2s, box-shadow 0.3s;
             z-index: 99;
             font-size: 1.1rem;
@@ -182,7 +193,8 @@
 
         .cart-float-btn:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+            background: #333333;
         }
 
         .cart-count {
@@ -228,7 +240,7 @@
         }
 
         .modal-header {
-            background: #667eea;
+            background: #000000;
             color: white;
             padding: 1.5rem;
             border-radius: 15px 15px 0 0;
@@ -268,7 +280,7 @@
         }
 
         .cart-item-price {
-            color: #667eea;
+            color: #000000;
             font-weight: bold;
         }
 
@@ -279,7 +291,7 @@
         }
 
         .qty-btn {
-            background: #667eea;
+            background: #000000;
             color: white;
             border: none;
             width: 30px;
@@ -307,7 +319,7 @@
             font-weight: bold;
             text-align: right;
             padding: 1rem;
-            border-top: 2px solid #667eea;
+            border-top: 2px solid #000000;
             margin-top: 1rem;
         }
 
@@ -374,7 +386,7 @@
         }
 
         .contact-info h3 {
-            color: #667eea;
+            color: #000000;
             margin-bottom: 1rem;
         }
 
@@ -398,8 +410,30 @@
         }
 
         @media (max-width: 768px) {
-            .hero h2 {
+            .header-container {
+                flex-direction: column;
+                min-height: auto;
+            }
+
+            .logo-section {
+                min-width: 100%;
+                padding: 1rem;
+            }
+
+            .logo-section img {
+                height: 80px;
+            }
+
+            .header-content {
+                padding: 1.5rem;
+            }
+
+            .header-content h1 {
                 font-size: 1.8rem;
+            }
+
+            .header-content p {
+                font-size: 1rem;
             }
 
             .products {
@@ -426,21 +460,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="header-container">
+            <div class="logo-section">
+                <img src="logo.png" alt="SriKDMShop">
+            </div>
             <div class="header-content">
-                <div class="logo">
-                    <img src="logo.png" alt="SriKDMShop">
+                <div>
+                    <h1>Mobile Gadgets & Service & Toys Sales</h1>
+                    <p>Your One-Stop Shop for Quality Products</p>
                 </div>
             </div>
         </div>
     </header>
-
-    <div class="hero">
-        <div class="container">
-            <h2>Mobile Gadgets & Service & Toys Sales</h2>
-            <p>Your One-Stop Shop for Quality Products</p>
-        </div>
-    </div>
 
     <div class="container">
         <div class="categories">
