--- a/index.html
+++ b/index.html
@@ -540,10 +540,10 @@
 
         <div class="contact-info">
             <h3>📞 Contact Us</h3>
-            <div class="contact-item">📱 Mobile: +91 XXXXX XXXXX</div>
+            <div class="contact-item">📱 Mobile: +91 95141 57908</div>
             <div class="contact-item">📧 Email: info@srikdmshop.com</div>
             <div class="contact-item">📍 Address: Chennai, Tamil Nadu</div>
-            <a href="https://wa.me/919XXXXXXXXX?text=Hi%20I%20want%20to%20order%20from%20SRI%20KDM%20Shop" 
+            <a href="https://wa.me/919514157908?text=Hi%20I%20want%20to%20order%20from%20SRI%20KDM%20Shop" 
                class="whatsapp-btn" target="_blank" id="contactWhatsApp">
                 💬 Order via WhatsApp
             </a>
