--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
             margin-bottom: 1rem;
         }
 
+        .product-image {
+            width: 100%;
+            height: 160px;
+            object-fit: cover;
+            border-radius: 10px;
+            margin-bottom: 0.75rem;
+            background: #f3f3f3;
+        }
+
+        .cart-thumb {
+            width: 56px;
+            height: 56px;
+            object-fit: cover;
+            border-radius: 8px;
+            margin-right: 0.75rem;
+        }
+
         .product-name {
             font-size: 1.2rem;
             font-weight: bold;
@@ -613,18 +630,18 @@
 
     <script>
         const products = [
-            { id: 1, name: 'Remote Control Car', category: 'Toys', price: 899, icon: '🚗', stock: 15 },
-            { id: 2, name: 'Puzzle Set (100 pieces)', category: 'Toys', price: 299, icon: '🧩', stock: 25 },
-            { id: 3, name: 'Teddy Bear', category: 'Toys', price: 599, icon: '🧸', stock: 20 },
-            { id: 4, name: 'Action Figure', category: 'Toys', price: 799, icon: '🦸', stock: 18 },
-            { id: 5, name: 'Building Blocks', category: 'Toys', price: 1299, icon: '🧱', stock: 12 },
-            { id: 6, name: 'Phone Case', category: 'Mobile Accessories', price: 199, icon: '📱', stock: 50 },
-            { id: 7, name: 'Screen Protector', category: 'Mobile Accessories', price: 149, icon: '🔲', stock: 100 },
-            { id: 8, name: 'USB Cable', category: 'Mobile Accessories', price: 249, icon: '🔌', stock: 75 },
-            { id: 9, name: 'Power Bank', category: 'Mobile Accessories', price: 1499, icon: '🔋', stock: 30 },
-            { id: 10, name: 'Wireless Earbuds', category: 'Mobile Accessories', price: 2499, icon: '🎧', stock: 20 },
-            { id: 11, name: 'Pop Socket', category: 'Mobile Accessories', price: 99, icon: '⭕', stock: 80 },
-            { id: 12, name: 'Car Phone Holder', category: 'Mobile Accessories', price: 299, icon: '🚙', stock: 40 }
+            { id: 1, name: 'Remote Control Car', category: 'Toys', price: 899, icon: '🚗', image: 'images/remote-car.svg', stock: 15 },
+            { id: 2, name: 'Puzzle Set (100 pieces)', category: 'Toys', price: 299, icon: '🧩', image: 'images/puzzle-set.svg', stock: 25 },
+            { id: 3, name: 'Teddy Bear', category: 'Toys', price: 599, icon: '🧸', image: 'images/teddy-bear.svg', stock: 20 },
+            { id: 4, name: 'Action Figure', category: 'Toys', price: 799, icon: '🦸', image: 'images/action-figure.svg', stock: 18 },
+            { id: 5, name: 'Building Blocks', category: 'Toys', price: 1299, icon: '🧱', image: 'images/building-blocks.svg', stock: 12 },
+            { id: 6, name: 'Phone Case', category: 'Mobile Accessories', price: 199, icon: '📱', image: 'images/phone-case.svg', stock: 50 },
+            { id: 7, name: 'Screen Protector', category: 'Mobile Accessories', price: 149, icon: '🔲', image: 'images/screen-protector.svg', stock: 100 },
+            { id: 8, name: 'USB Cable', category: 'Mobile Accessories', price: 249, icon: '🔌', image: 'images/usb-cable.svg', stock: 75 },
+            { id: 9, name: 'Power Bank', category: 'Mobile Accessories', price: 1499, icon: '🔋', image: 'images/power-bank.svg', stock: 30 },
+            { id: 10, name: 'Wireless Earbuds', category: 'Mobile Accessories', price: 2499, icon: '🎧', image: 'images/wireless-earbuds.svg', stock: 20 },
+            { id: 11, name: 'Pop Socket', category: 'Mobile Accessories', price: 99, icon: '⭕', image: 'images/pop-socket.svg', stock: 80 },
+            { id: 12, name: 'Car Phone Holder', category: 'Mobile Accessories', price: 299, icon: '🚙', image: 'images/car-phone-holder.svg', stock: 40 }
         ];
 
         const DELIVERY_CHARGE = 50;
@@ -638,7 +655,7 @@
             
             grid.innerHTML = filtered.map(product => `
                 <div class="product-card">
-                    <div class="product-icon">${product.icon}</div>
+                    ${product.image ? `<img class="product-image" src="${product.image}" alt="${product.name}">` : `<div class="product-icon">${product.icon}</div>`}
                     <div class="product-name">${product.name}</div>
                     <div class="product-category">${product.category}</div>
                     <div class="product-price">₹${product.price}</div>
@@ -682,9 +699,12 @@
             } else {
                 cartItems.innerHTML = cart.map(item => `
                     <div class="cart-item">
-                        <div class="cart-item-info">
-                            <div class="cart-item-name">${item.icon} ${item.name}</div>
-                            <div class="cart-item-price">₹${item.price} × ${item.quantity} = ₹${item.price * item.quantity}</div>
+                        <div class="cart-item-info" style="display:flex; align-items:center; gap:0.5rem;">
+                            ${item.image ? `<img class="cart-thumb" src="${item.image}" alt="${item.name}">` : `<div style="font-size:1.4rem;">${item.icon}</div>`}
+                            <div>
+                                <div class="cart-item-name">${item.name}</div>
+                                <div class="cart-item-price">₹${item.price} × ${item.quantity} = ₹${item.price * item.quantity}</div>
+                            </div>
                         </div>
                         <div class="quantity-controls">
                             <button class="qty-btn" onclick="updateQuantity(${item.id}, -1)">-</button>
