--- a/index.html
+++ b/index.html
@@ -733,8 +733,8 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 SRI KDM Shop. All rights reserved.</p>
-            <p>Toys & Mobile Accessories | Chennai, Tamil Nadu</p>
+            <p>&copy; 2026 SRI KDM Shop. All rights reserved.</p>
+            <p>Toys & Mobile Accessories | Madurai, Tamil Nadu</p>
         </div>
     </footer>
 
