--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
     <script>
         const products = [
-            { id: 1, name: 'Remote Control Car', category: 'Toys', price: 899, icon: '🚗', image: 'images/remote-car.svg', stock: 15 },
+            { id: 1, name: 'Remote Control Car', category: 'Toys', price: 700, icon: '🚗', image: 'images/remote-car.png', stock: 50 },
             { id: 2, name: 'Puzzle Set (100 pieces)', category: 'Toys', price: 299, icon: '🧩', image: 'images/puzzle-set.svg', stock: 25 },
             { id: 3, name: 'Teddy Bear', category: 'Toys', price: 599, icon: '🧸', image: 'images/teddy-bear.svg', stock: 20 },
             { id: 4, name: 'Action Figure', category: 'Toys', price: 799, icon: '🦸', image: 'images/action-figure.svg', stock: 18 },
@@ -941,7 +941,7 @@
         // Helper: attempt to open a UPI/payment intent. On mobile this should open installed apps.
         function openPaymentApp(mode, amount) {
             // Replace this VPA with your actual merchant VPA if available
-            const MERCHANT_VPA = 'srikdmshop@upi';
+            const MERCHANT_VPA = 'muthumk1516-2@oksbi';
             const MERCHANT_NAME = 'SRI KDM Shop';
 
             // Amount should be a number (no currency symbol)
